javascript/ql/test/query-tests/NodeJS/InvalidExport/tst3.js
// OK: useless assignment flagged by other query
exports = module.exports = { a: 23 };
